<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rendezvous</string>
    <string name="emailAddress">E-Mail Address:</string>
    <string name="password">Password:</string>
    <string name="apiKey">API Key:</string>
    <string name="submit">Submit</string>
    <string name="authorizeMessage">In order to use this application, you need to authorize this application on meetup.com. <br /> 
    	Clicking on the button below will open a new browser window where you will be asked to grant permission to the application. You will be returned back to the application after you select your response.</string>
	<string name="authorize">Authorize</string>
	<string name="haveAComment">Have a comment?</string>
	<string name="youRsvped">You RSVPed: </string>
	<string name="rsvpClosed">\nSorry! RSVPs are closed.</string>
	<string name="guestsLabel">Guests:</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="maybe">Maybe</string>
	<string name="noCommentsYet">No comments for this event.</string>
	<string name="addComment">Add a comment:</string>
	<string name="addCommentBtn">Add Comment</string>
	<string name="myMeetups">Meetups</string>
	<string name="myGroups">Groups</string>
	<string name="generalPrefs">General Preferences</string>
	<string name="startListLabel">Starting List</string>
	<string name="startupListDesc">Default list to open.</string>
	<string name="appBehavior">Application Behavior</string>
	<string name="fetchEventsFrom">Past Meetups</string>
	<string name="fetchEventsFromDesc">Previous meetups to show in your list.</string>
	<string name="lastOneDay">Since yesterday</string>
	<string name="lastOneWeek">Since last week</string>
	<string name="lastTwoWeeks">Since last two weeks</string>
	<string name="lastOneMonth">Since last month</string>
	<string name="fetchEventsTo">Future Meetups</string>
	<string name="fetchEventsToDesc">Future meetups to show in your list.</string>
	<string name="nextOneDay">Meetups tomorrow</string>
	<string name="nextOneWeek">Meetups next week</string>
	<string name="nextTwoWeeks">Meetups for next two weeks</string>
	<string name="nextOneMonth">Meetups for next month</string>
	<string name="prefSettings">Settings</string>
	<string name="prefResetCache">Reset Cache</string>
	<string name="prefDeleteAcc">Delete Account</string>
	<string name="takePhoto">Take a photo</string>
	<string name="cancelPhoto">Photo canceled</string>
	<string name="uploadPhoto">Upload photo </string>
	<string name="uploadPhotoSuccess">Photo uploaded successfully.</string>
	<string name="photoCaption">Caption:</string>
	<string name="advancedPrefs">Advanced Preferences</string>
	<string name="imageThreadCountTitle">Image threads</string>
	<string name="imageThreadCountDesc">Number of threads used to download images. The app may crash depending on the resources of your phone.</string>
	<string name="cachingTitle">Cache</string>
	<string name="cachingDesc">Enable/disable caching data.</string>
	<string name="dontMessAround">Change these only if you know what you are doing.</string>
	<string name="addToCalendar">Add to Google Calendar</string>
	<string name="calendarList">Calendar</string>
	<string name="calendarListDesc">Meetups will be added to this calendar.</string>
	<string name="noCalSel">A calendar has not been specified. Press OK to open the Settings screen.</string>
	<string name="savedInCal">Event was successfully added to your calendar.</string>
	<string name="calSaveFailed">There was an error adding the event to your calendar. A crash report has been created. Please restart Rendezvous and send the crash report to the developer. You may try adding the event to the calendar later.</string>
	<string name="meetupsTabLabel">Meetups</string>
	<string name="groupsTabLabel">Groups</string>
	<string name="notifications">Notifications</string>
	<string name="notificationsDesc">Enable or disable notifications for new meetups.</string>
	<string name="checkNotificationsDuration">Check Interval</string>
	<string name="checkNotificationsDurationDesc">Notifications will be checked after every specified time interval</string>
	<string name="every30mins">Every 30 minutes</string>
	<string name="everyOneHour">Every hour</string>
	<string name="everyThreeHours">Every 3 hours</string>
	<string name="everySixHours">Every 6 hours</string>
	<string name="everyTwelveHours">Every 12 hours</string>
	<string name="newEvents">new events.</string>
	<string name="newEvent">new event.</string>
	<string name="meetupNotification">New Meetup Notification</string>
	<string name="activityTabLabel">Activity</string>
	<string name="crashNotice">Rendezvous Crashed. Press OK to send a crash report.</string>
	<string name="crashDetected">A previous crash was detected and a crash report was created. Please use the new menu options to send the crash report to the developer.</string>
	<string name="reportCrash">Send crash report</string>
	<string name="deleteCrashReports">Delete all crash reports.</string>
	<string name="errorSendingCrashReport">An error occurred while sending crash report. Please try again later.</string>
	<string name="rateEvent">Rate Event</string>
	<string name="selectRating">Select your rating:</string>
	<string name="noOfAttendees">Number of attendees:</string>
	<string name="yourThoughts">Share your thoughts about the event:</string>
	<string name="submitRating">Submit rating</string>
	<string name="viewComments">View Comments</string>
	<string name="addPhotoCommentMenu">Add Comment</string>
	<string name="noCommentsOnPhoto">This photo has no comments on it. Perhaps, you may want to add one.</string>
	<string name="drawerHandleText">== Choose a list ==</string>
	<string name="drawListMyGroups">Groups</string>
	<string name="drawListAllEvents">All Meetups</string>
	<string name="drawListYesRsvps">Confirmed Meetups</string>
	<string name="drawListNoRsvps">Declined Meetups</string>
	<string name="drawListMayBeRsvps">Meetups With Maybe RSVP</string>
	<string name="drawListMyWaitingLists">Waiting List</string>
	<string name="drawListMyPendingMeetups">Meetups Pending RSVP</string>
	<string name="drawListMeOrganizer">Meetups I Organize</string>
	<string name="drawListActivityFeed">Activity Feed</string>
	
	<string name="whatsNew">"<b>Changes in 15"</b>:\n\nNew sliding menu for the home screen. Use Settings to select the default list.</string>
</resources>
